# NosCMLib

./: CMakeLists.txt  GeneratePackage.ps1
CMake/: Compiler.cmake  GetCatch2.cmake  NosCMLibConfig.cmake.in  Project.cmake
